CHORE: 유닛 테스트, 통합 테스트 실행 스크립트 추가
* 유닛 테스트: npm run test:unit
* 통합 테스트: npm run test:integration

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest",
+    "test:unit": "cross-env NODE_ENV=test jest src/tests/unit",
+    "test:integration": "cross-env NODE_ENV=test jest src/tests/integration",
     "start": "cross-env NODE_ENV=development nodemon src/index.ts",
     "dev": "cross-env NODE_ENV=development nodemon --watch src --exec ts-node src/index.ts",
     "lint": "eslint . --ext .ts",
