DOCS: 환경 변수 파일 예시 수정

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+# DB 설정
 dbName=your_db_name
-user=user_db_user
-password=user_db_password
-host=localhost
-port=5432
+dbUser=your_db_user
+dbPassword=user_db_password
+dbHost=localhost
+dbPort=5432
+
+# JWT 설정
+jwtSecretKey=your_jwt_secret_key
