CHORE: 전체 테스트, 통합 테스트 스크립트에 runInBand 옵션 추가
* test, test: Integration 스크립트에 runInBand 옵션 추가
* 테스트 병렬 실행 시에 오류가 발생하여 싱글 스레드 실행 옵션 추가

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest --runInBand",
     "test:unit": "cross-env NODE_ENV=test jest src/tests/unit",
-    "test:integration": "cross-env NODE_ENV=test jest src/tests/integration",
+    "test:integration": "cross-env NODE_ENV=test jest src/tests/integration --runInBand",
     "start": "cross-env NODE_ENV=development nodemon src/index.ts",
     "dev": "cross-env NODE_ENV=development nodemon --watch src --exec ts-node src/index.ts",
     "lint": "eslint . --ext .ts",
