DOCS: 환경변수 파일 예시 수정

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ dbPort=5432
 
 # JWT 설정
 jwtSecretKey=your_jwt_secret_key
+jwtExpiresIn=your_jwt_expires_in
+jwtRefreshSecretKey=your_refresh_jwt_key
+jwtRefreshtExpiresIn=your_jwt_refresh_expires_in
+
+# 쿠키 설정
+cookieMaxAge=your_cookie_max_age
